--- a/index.html
+++ b/index.html
@@ -13,6 +13,20 @@
          <a href="">Service</a>
 
     </header>
+    <article>
+         <h1>Aricle 1</h1>
+         <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus necessitatibus
+             rerum quia incidunt quidem quisquam molestias repellat. Eius corporis dolores 
+            eum aut quod quisquam possimus aliquam consequuntur, totam minus. Suscipit?
+         </p>
+         <h1>Aricle 1</h1>
+         <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus necessitatibus
+             rerum quia incidunt quidem quisquam molestias repellat. Eius corporis dolores 
+            eum aut quod quisquam possimus aliquam consequuntur, totam minus. Suscipit?
+         </p>
+    </article>
     
 </body>
 </html>
