add style on paragraph

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Learn-CSS</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -16,9 +17,9 @@
     <article>
          <h1>Aricle 1</h1>
          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus necessitatibus
-             rerum quia incidunt quidem quisquam molestias repellat. Eius corporis dolores 
-            eum aut quod quisquam possimus aliquam consequuntur, totam minus. Suscipit?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus necessitatibus</p>
+          <p>  rerum quia incidunt quidem quisquam molestias repellat. Eius corporis dolores </p>
+          <p>  eum aut quod quisquam possimus aliquam consequuntur, totam minus. Suscipit?
          </p>
          <h1>Aricle 1</h1>
          <p>
