--- a/index.html
+++ b/index.html
@@ -17,17 +17,26 @@
     <article>
          <h1>Aricle 1</h1>
          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus necessitatibus</p>
-          <p>  rerum quia incidunt quidem quisquam molestias repellat. Eius corporis dolores </p>
-          <p>  eum aut quod quisquam possimus aliquam consequuntur, totam minus. Suscipit?
-         </p>
-         <h1>Aricle 1</h1>
-         <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus necessitatibus
-             rerum quia incidunt quidem quisquam molestias repellat. Eius corporis dolores 
+           <span lang="en"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus necessitatibus</span>
+            <span>rerum quia incidunt quidem quisquam molestias repellat. Eius corporis dolores </span>
             eum aut quod quisquam possimus aliquam consequuntur, totam minus. Suscipit?
          </p>
+         <h1 class="article">Aricle 1</h1>
+         <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus necessitatibus
+             rerum <a href="http://example.org">quia incidunt quidem quisquam molestias repellat.</a> quia incidunt quidem quisquam molestias repellat. Eius corporis dolores 
+            eum aut quod quisquam possimus aliquam consequuntur, totam minus. Suscipit?
+         </p>
+
+         <ul>
+            <li><a href="#internal">Lien interne<a></li>
+            <li><a href="http://example.com">Lien d'exemple</a></li>
+            <li><a href="#InSensitive">Lien interne insensible à la casse</a></li>
+            <li><a href="http://example.org">Lien vers example.org</a></li>
+          </ul>
+          
     </article>
+
     
 </body>
 </html>
