--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Document</title>
 </head>
 <body>
-  
+     <title>I'm Eloge</title>
+     <p>Je suis un develloppeur web et mobile</p>
 </body>
 </html>
