add description pour les connaissances frontend

--- a/index.html
+++ b/index.html
@@ -8,5 +8,14 @@
 <body>
      <title>I'm Eloge</title>
      <p>Je suis un develloppeur web et mobile</p>
+     <p>Pour les applications web je connait pas mal de chose de language comme :</p>
+     <ul>
+        <li>Frontend</li>
+        <li>HTML 5</li>
+        <li>CSS 3</li>
+        <li>JAVASCRIPT</li>
+        <li>REACT JS</li>
+        <li>BOOSTRAPP 3,4,5</li>
+     </ul>
 </body>
 </html>
