add description connaissances backend

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Document</title>
 </head>
 <body>
-     <title>I'm Eloge</title>
+     <title> Hi  👋👋👋👋👋I'm Eloge</title>
      <p>Je suis un develloppeur web et mobile</p>
      <p>Pour les applications web je connait pas mal de chose de language comme :</p>
      <ul>
@@ -17,5 +17,21 @@
         <li>REACT JS</li>
         <li>BOOSTRAPP 3,4,5</li>
      </ul>
+      <ul>
+          <li>Backend</li>
+          <li>PHP
+            <ul>
+              <li>CODEIGNITER 3,4</li>
+            </ul>
+          </li>
+          <li>
+            JAVASCRIPT
+            <ul>
+              <li>NODE JS</li>
+            </ul>
+          </li>
+
+      </ul>
+
 </body>
 </html>
