--- a/index.html
+++ b/index.html
@@ -12,10 +12,18 @@
      <ul>
         <li>Frontend</li>
         <li>HTML 5</li>
-        <li>CSS 3</li>
-        <li>JAVASCRIPT</li>
-        <li>REACT JS</li>
-        <li>BOOSTRAPP 3,4,5</li>
+        <li>CSS 3
+           <ul>
+            <li>BOOSTRAP 3,4,5</li>
+            <li>SASS</li>
+            <li>TAILWIND</li>
+           </ul>
+        </li>
+        <li>JAVASCRIPT
+          <ul>
+            <li>REACT JS</li>
+          </ul>
+        </li>
      </ul>
       <ul>
           <li>Backend</li>
