change la balise qui affiche le titre

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <title>Document</title>
 </head>
 <body>
-     <title> Hi  👋👋👋👋👋I'm Eloge</title>
+     <b> Hi  👋👋👋👋👋I'm Eloge</b>
      <p>Je suis un develloppeur web et mobile</p>
-     <p>Pour les applications web je connait pas mal de chose de language comme :</p>
+     <p>Pour les applications web je connais pas mal de chose de language comme :</p>
      <ul>
         <li>Frontend</li>
         <li>HTML 5</li>
