add style to card element

--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-     <b> Hi  👋👋👋👋👋I'm Eloge</b>
-     <p>Je suis un develloppeur web et mobile</p>
-     <p>Pour les applications web je connais pas mal de chose de language comme :</p>
+  <div class="card">
+     <b class="title"> Hi  👋👋👋👋👋I'm Eloge</b>
+     <p class="p-title">Je suis un develloppeur web et mobile</p>
+     <p class="p-subTitle">Pour les applications web je connais pas mal de chose de language comme :</p>
      <ul>
         <li>Frontend</li>
         <li>HTML 5</li>
@@ -41,6 +42,6 @@
           </li>
 
       </ul>
-
+    </div>
 </body>
 </html>
