styling card and title

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="card">
-     <b class="title"> Hi  👋👋👋👋👋I'm Eloge</b>
+     <p class="title"> Hi  👋👋👋👋👋I'm Eloge</p>
      <p class="p-title">Je suis un develloppeur web et mobile</p>
      <p class="p-subTitle">Pour les applications web je connais pas mal de chose de language comme :</p>
      <ul>
