styling the title

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
      <p class="title"> Hi  👋👋👋👋👋I'm Eloge</p>
      <p class="p-title">Je suis un develloppeur web et mobile</p>
      <p class="p-subTitle">Pour les applications web je connais pas mal de chose de language comme :</p>
-     <ul>
+     <ul class="Frontend">
         <li>Frontend</li>
         <li>HTML 5</li>
         <li>CSS 3
