etuder sur les flex

--- a/index.html
+++ b/index.html
@@ -11,17 +11,27 @@
      <p class="title"> Hi  👋👋👋👋👋I'm Eloge</p>
      <p class="p-title">Je suis un develloppeur web et mobile</p>
      <p class="p-subTitle">Pour les applications web je connais pas mal de chose de language comme :</p>
-     <ul class="Frontend">
+     <div >
+         <b class="b-title">Frontend</b><hr>
+         <!-- <p>HTML5</p>
+         <p>CSS3</p> -->
+         <div class="content_frontend">
+            <div>BOOSTRAP 3,4,5</div>
+            <div>SASS</div>
+            <div>TAILWIND</div>
+         </div>
+     </div>
+     <!-- <ul class="Frontend">
         <li>Frontend</li>
-          <li>HTML 5</li>
-          <li>CSS 3
+          <li class="list_one">HTML 5</li>
+          <li class="list_one">CSS 3
               <ul>
                 <li>BOOSTRAP 3,4,5</li>
                 <li>SASS</li>
                 <li>TAILWIND</li>
               </ul>
           </li>
-          <li>JAVASCRIPT
+          <li class="list_one">JAVASCRIPT
               <ul>
                 <li>REACT JS</li>
               </ul>
@@ -41,7 +51,13 @@
             </ul>
           </li>
 
-      </ul>
+      </ul> -->
+    </div>
+
+    <div class="content">
+       <div class="card"></div>
+       <div class="card"></div>
+       <div class="card"></div>
     </div>
 </body>
 </html>
