add align-content to element

--- a/index.html
+++ b/index.html
@@ -7,57 +7,10 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="card">
-     <p class="title"> Hi  👋👋👋👋👋I'm Eloge</p>
-     <p class="p-title">Je suis un develloppeur web et mobile</p>
-     <p class="p-subTitle">Pour les applications web je connais pas mal de chose de language comme :</p>
-     <div >
-         <b class="b-title">Frontend</b><hr>
-         <!-- <p>HTML5</p>
-         <p>CSS3</p> -->
-         <div class="content_frontend">
-            <div>BOOSTRAP 3,4,5</div>
-            <div>SASS</div>
-            <div>TAILWIND</div>
-         </div>
-     </div>
-     <!-- <ul class="Frontend">
-        <li>Frontend</li>
-          <li class="list_one">HTML 5</li>
-          <li class="list_one">CSS 3
-              <ul>
-                <li>BOOSTRAP 3,4,5</li>
-                <li>SASS</li>
-                <li>TAILWIND</li>
-              </ul>
-          </li>
-          <li class="list_one">JAVASCRIPT
-              <ul>
-                <li>REACT JS</li>
-              </ul>
-          </li>
-     </ul>
-      <ul>
-          <li>Backend</li>
-          <li>PHP
-            <ul>
-              <li>CODEIGNITER 3,4</li>
-            </ul>
-          </li>
-          <li>
-            JAVASCRIPT
-            <ul>
-              <li>NODE JS</li>
-            </ul>
-          </li>
-
-      </ul> -->
-    </div>
-
-    <div class="content">
-       <div class="card"></div>
-       <div class="card"></div>
-       <div class="card"></div>
-    </div>
+   <div class="flex-start">
+      <div class="item">Item 1</div>
+      <div class="item">Item 2</div>
+      <div class="item">Item 3</div>
+   </div>
 </body>
 </html>
