--- a/index.html
+++ b/index.html
@@ -12,5 +12,15 @@
       <div class="item">Item 2</div>
       <div class="item">Item 3</div>
    </div>
+   <div class="center">
+      <div class="item">Item 1</div>
+      <div class="item">Item 2</div>
+      <div class="item">Item 3</div>
+   </div>
+   <div class="flex-end">
+      <div class="item">Item 1</div>
+      <div class="item">Item 2</div>
+      <div class="item">Item 3</div>
+   </div>
 </body>
 </html>
