use proprerty after()

--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
       <div class="item">Item 3</div>
    </div>
    <div class="center">
-      <div class="item">Item 1</div>
+      <div class="item">
+        <div class="card">
+           Item 1
+        </div>
+      </div>
       <div class="item">Item 2</div>
       <div class="item">Item 3</div>
    </div>
