add style les menu

--- a/portofolio.html
+++ b/portofolio.html
@@ -9,10 +9,10 @@
 <body>
 
     <nav>
-         <a href="">Home</a>
-         <a href="">Contact</a>
-         <a href="">Skills</a>
-         <a href="">About</a>
+         <a href="" class="item-nav">Home</a>
+         <a href="" class="item-nav">Contact</a>
+         <a href="" class="item-nav">Skills</a>
+         <a href="" class="item-nav">About</a>
     </nav>
     
 </body>
