--- a/portofolio.html
+++ b/portofolio.html
@@ -3,16 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Eloge257</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <nav>
-         <a href="" class="item-nav">Home</a>
-         <a href="" class="item-nav">Contact</a>
-         <a href="" class="item-nav">Skills</a>
-         <a href="" class="item-nav">About</a>
+        <div class="item-icon">
+            Eloge257
+        </div>
+
+        <div class="item-menu">
+            <a href="" class="item-nav">Home</a>
+            <a href="" class="item-nav">Contact</a>
+            <a href="" class="item-nav">Skills</a>
+            <a href="" class="item-nav">About</a>
+        </div>
+
     </nav>
     
 </body>
