add description picture

--- a/portofolio.html
+++ b/portofolio.html
@@ -35,7 +35,20 @@
                   Skills</a>
             <a href="" class="item-nav">About</a>
         </div>
-
     </nav>  
+
+    <!-- content element -->
+    <div>
+        <div>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, recusandae 
+            omnis illum molestias placeat, doloremque perspiciatis 
+            odit distinctio blanditiis ad explicabo molestiae sapiente iure, consequuntur
+             nam pariatur numquam consequatur ducimus?
+        </div>
+        <div>
+            <img src="profile.png" alt="" srcset="">
+
+        </div>
+    </div>
 </body>
 </html>
