--- a/portofolio.html
+++ b/portofolio.html
@@ -38,14 +38,14 @@
     </nav>  
 
     <!-- content element -->
-    <div>
-        <div>
+    <div class="content">
+        <div class="content-text">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, recusandae 
             omnis illum molestias placeat, doloremque perspiciatis 
             odit distinctio blanditiis ad explicabo molestiae sapiente iure, consequuntur
              nam pariatur numquam consequatur ducimus?
         </div>
-        <div>
+        <div class="content-picture">
             <img src="profile.png" alt="" srcset="">
 
         </div>
