add style image

--- a/portofolio.html
+++ b/portofolio.html
@@ -46,8 +46,7 @@
              nam pariatur numquam consequatur ducimus?
         </div>
         <div class="content-picture">
-            <img src="profile.png" alt="" srcset="">
-
+            <img src="profile.png" alt="" srcset=""  class="content-descrp">
         </div>
     </div>
 </body>
