--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
       <div class="item">Item 1</div>
       <div class="item">Item 2</div>
       <div class="item">Item 3</div>
+      <div class="item">Item 3</div>
+      <div class="item">Item 3</div>
+      <div class="item">Item 3</div>
+      <div class="item">Item 3</div>
+      <div class="item">Item 3</div>
+      <div class="item">Item 3</div>
+      <div class="item">Item 3</div>
+
    </div>
    <div class="center">
       <div class="item">
